<resources>
    <string name="app_name">TFG</string>
    <string name="start">Start</string>
    <string name="SSID">Wi-Fi SSID</string>
    <string name="password">Password</string>
    <string name="wifi_connect">Connect</string>
    <string name="ble_info">Start Device. Connect to BLE</string>
    <string name="wifi_info">Enter WiFi SSID and Password</string>
    <string name="found_ble_device">Found BLE device</string>
    <string name="found_ble_devices">Found BLE devices</string>
    <string name="ble_device_scan_failed">"Scan Failed with error code "</string>
    <string name="device_name">"Device Name "</string>
    <string name="device_mac">"MAC: XX:XX:XX:XX:XX"</string>
    <string name="sel_ble">"+"</string>
    <string name="disconnected">Disconnected</string>
    <string name="error">Error</string>
    <string name="ble_search">Searching BLE devices</string>
    <string name="ble_bt">Connect to device</string>
    <string name="time">Set time</string>
    <string name="user_bt">Add user to device</string>
    <string name="surname">Surname</string>
    <string name="id">ID</string>
    <string name="wifi_init">Select WiFi SSID to connect</string>
    <string name="sendUser">Add new User</string>
    <string name="title_activity_set_time">Set Time</string>
    <string name="bt_time">Set time to device</string>
    <string name="tx_time">Configure the time to start the activity</string>
    <string name="bt_ip">Set IP from server</string>
    <string name="tx_ip">Server IP Adress</string>
    <string name="bt_sendip">Send IP Adress</string>
</resources>