<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menu">



    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/ble_bt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ble_bt" />

        <Button
            android:id="@+id/add_user_bt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_bt" />

        <Button
            android:id="@+id/wifi_bt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>